--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -81,4 +81,15 @@
         android:textColor="#fff"
         android:textSize="25sp" />
 
+    <TextView
+        android:id="@+id/aboutme"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:paddingRight="10dp"
+        android:paddingTop="30dp"
+        android:text="About me"
+        android:textColor="#22AAE2"
+        android:textSize="30sp" />
+
 </LinearLayout>
