--- a/res/layout/lab3_forgot.xml
+++ b/res/layout/lab3_forgot.xml
@@ -27,7 +27,7 @@
         android:paddingLeft="10dp" >
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/aboutme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Username"
