--- a/res/layout/about_me.xml
+++ b/res/layout/about_me.xml
@@ -1,34 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:background="#F9F9F9"
     android:orientation="vertical" >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="300dp"
         android:background="@drawable/bia"
         android:orientation="horizontal"
-        android:paddingTop="70dp" >
+        android:paddingTop="130dp" >
 
         <ImageView
             android:id="@+id/imageView1"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="200dp"
+            android:layout_height="150dp"
             android:layout_gravity="left"
             android:layout_marginLeft="20dp"
+            android:background="@drawable/border_row"
+            android:paddingLeft="5dp"
+            android:paddingRight="3dp"
             android:src="@drawable/avatar" />
 
         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="70dp"
             android:paddingLeft="10dp"
             android:text="Ntsinh"
             android:textColor="#fff"
-            android:textSize="30sp"
+            android:textSize="40sp"
             android:textStyle="bold" />
     </LinearLayout>
 
@@ -42,14 +44,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
-            android:text="Giới thiệu" />
+            android:text="Giới thiệu"
+            android:textSize="25sp" />
 
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1.5"
-            android:text="Liên hệ" />
+            android:text="Liên hệ"
+            android:textSize="25sp" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -63,43 +68,51 @@
             android:id="@+id/aboutme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Họ tên: Nguyễn Trường Sinh" />
+            android:text="Họ tên: Nguyễn Trường Sinh"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Giới tính: Nam" />
+            android:text="Giới tính: Nam"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ngày sinh: 1994" />
+            android:text="Ngày sinh: 1994"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sống tại Buôn Ma Thuột" />
+            android:text="Sống tại Buôn Ma Thuột"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sinh viên tại FPT Polytechnic Tây Nguyên" />
+            android:text="Sinh viên tại FPT Polytechnic Tây Nguyên"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ngành học: Development" />
+            android:text="Ngành học: Development"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Có 0 người theo dõi (FA)" />
+            android:text="Có 0 người theo dõi (FA)"
+            android:textSize="30sp" />
+
     </LinearLayout>
 
 </LinearLayout>
