--- a/res/drawable/ripple_effect.xml
+++ b/res/drawable/ripple_effect.xml
@@ -10,9 +10,8 @@
 		    <corners 
 		        android:topLeftRadius="20dp"
 		        android:bottomRightRadius="20dp"/>
-		    <stroke android:width="3dip" android:color="#AFFFAA" />
 		    
 		</shape>
     </item>
+    <item android:drawable="@drawable/button_style"></item>
 </ripple>
-
