--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -15,7 +15,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:paddingBottom="10dp"
-        android:text="Danh sách lab" />
+        android:text="Danh sách lab"
+        android:textSize="40dp" />
 
     <Button
         android:id="@+id/btn1"
@@ -23,9 +24,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button_selecter"
-        android:text="Lab1(chưa có)"
+        android:text="Lab1"
         android:textColor="#fff"
-        android:textSize="25sp" />
+        android:textSize="25dip" />
 
     <Button
         android:id="@+id/btn2"
@@ -35,7 +36,7 @@
         android:background="@drawable/button_selecter"
         android:text="Lab2"
         android:textColor="#fff"
-        android:textSize="25sp" />
+        android:textSize="25dip" />
 
     <Button
         android:id="@+id/btn3"
@@ -45,7 +46,7 @@
         android:background="@drawable/button_selecter"
         android:text="Lab3"
         android:textColor="#fff"
-        android:textSize="25sp" />
+        android:textSize="25dip" />
 
     <Button
         android:id="@+id/btn4"
@@ -55,7 +56,7 @@
         android:background="@drawable/button_selecter"
         android:text="Lab4"
         android:textColor="#fff"
-        android:textSize="25sp" />
+        android:textSize="25dip" />
 
     <Button
         android:id="@+id/btn5"
@@ -63,9 +64,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button_selecter"
-        android:text="Lab5(chưa có)"
+        android:text="Lab5"
         android:textColor="#fff"
-        android:textSize="25sp" />
+        android:textSize="25dip" />
 
     <Button
         android:id="@+id/btn6"
@@ -75,7 +76,7 @@
         android:background="@drawable/button_selecter"
         android:text="Lab6(chưa có)"
         android:textColor="#fff"
-        android:textSize="25sp" />
+        android:textSize="25dip" />
 
     <Button
         android:id="@+id/btn7"
@@ -85,7 +86,7 @@
         android:background="@drawable/button_selecter"
         android:text="Lab7(chưa có)"
         android:textColor="#fff"
-        android:textSize="25sp" />
+        android:textSize="25dip" />
 
     <Button
         android:id="@+id/btn8"
@@ -95,7 +96,7 @@
         android:background="@drawable/button_selecter"
         android:text="Lab8(chưa có)"
         android:textColor="#fff"
-        android:textSize="25sp" />
+        android:textSize="25dip" />
 
     <TextView
         android:id="@+id/aboutme"
@@ -103,13 +104,13 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:layout_marginTop="30dp"
-        android:background="@drawable/button_selecter"
+        android:background="@drawable/ripple_effect"
         android:paddingBottom="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="10dp"
         android:text="About me"
         android:textColor="#00FF00"
-        android:textSize="30sp" />
+        android:textSize="30dip" />
 
 </LinearLayout>
