--- a/res/values/style.xml
+++ b/res/values/style.xml
@@ -12,4 +12,8 @@
     <style name="button_style">
         <item name="android:layout_marginBottom" >10dp</item>
     </style>
+    <style name="fontstyle2">
+        <item name="android:textSize" >30dp</item>
+        <item name="android:textColor">#3B5998</item>
+    </style>
 </resources>
