--- a/res/layout/about_me.xml
+++ b/res/layout/about_me.xml
@@ -12,7 +12,7 @@
         android:paddingTop="130dp" >
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/icon"
             android:layout_width="200dp"
             android:layout_height="150dp"
             android:layout_gravity="left"
@@ -23,7 +23,7 @@
             android:src="@drawable/avatar" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/txtInfo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="70dp"
