--- a/res/layout/contact.xml
+++ b/res/layout/contact.xml
@@ -7,14 +7,14 @@
     android:paddingTop="10dp" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/txtInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Email: ntsinh151@gmail.com"
         android:textSize="30dp" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/txtKetqua"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Github: https://github.com/ntsinh"
