--- a/res/layout/lab2.xml
+++ b/res/layout/lab2.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/txtInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -28,7 +28,7 @@
         android:id="@+id/btn2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Lab1:   Khung chương trình lab(giao diện)"
+        android:text="Lab2:   Khung chương trình lab(giao diện)"
         android:textColor="#fff"
         android:textSize="25sp" />
 
