--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,5 +16,7 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
-
+	<style name="hidetitle" parent="android:style/Theme.Dialog">
+	   <item name="android:windowNoTitle">true</item>
+	</style>
 </resources>
